feat: add MQTT OTA and improve device status views
